fix: scrape periodically